Added requirements and updated notebook

--- a/test.ipynb
+++ b/test.ipynb
@@ -305,7 +305,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "web-scrap-bot",
    "language": "python",
    "name": "python3"
   },
